# audacious-plugins

./: config.h.meson  configure.ac  meson.build  meson_options.txt
.github/workflows/: c-cpp.yml
po/: audacious-plugins.pot  ca.po  es.po
src/: meson.build
src/arduino-vumeter/: Makefile  arduino-vumeter.cc
src/arduino-vumeter/arduino_vumeter/: arduino_vumeter.ino  types.h
src/audpl/: audpl.cc
src/gtkui/: columns.cc  gtkui.h  menus.cc  ui_gtk.cc  ui_playlist_notebook.h  ui_playlist_widget.cc  ui_playlist_widget.h  ui_statusbar.cc
src/hotkey/: gui.cc  plugin.cc  plugin.h
src/lyrics-qt/: lyrics-qt.cc
src/playback-history/: meson.build
src/playback-history-qt/: meson.build
src/playlist-manager/: meson.build
src/playlist-manager-qt/: meson.build
src/psf/: corlett.cc
src/qthotkey/: gui.cc  plugin.cc  plugin.h
src/qtui/: main_window.cc  main_window.h  menus.cc  playlist-qt.cc  playlist_header.cc  playlist_model.cc  playlist_model.h
src/search-tool/: meson.build
src/search-tool-qt/: meson.build
src/skins/: actions.cc  main.cc  menus.cc
src/skins-qt/: actions.cc  main.cc  menus.cc
src/vumeter/: Makefile  truepeakdsp.cc  truepeakdsp.h  vumeter.cc
src/vumeter-qt/: changelog.md  vumeter_qt.cc  vumeter_qt_widget.cc  vumeter_qt_widget.h
src/vumeter/zita-resampler/: resampler-table.cc  resampler.cc  resampler.h
